# BlackholeWidget

./: .gitignore  LICENSE  README.md  generate-icons.py  index.html  package-lock.json  package.json  release.ps1  settings.html  vite.config.js  项目结构和编译运行说明.md
src/: App.vue  SettingsApp.vue  settings-main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  file_ops.rs  main.rs  tray.rs
src/composables/: useBlackHole.js  useFileDrop.js
src/models/: index.js  model-1.js  model-2.js  model-3.js  model-4.js
src/shaders/: blackHole.frag.glsl  blackHole.vert.glsl  model4Raymarch.frag.glsl  model4Raymarch.vert.glsl
src/styles/: main.css
