[package]
name = "blackhole-widget"
version = "0.1.0"
description = "Desktop black hole widget - drag files to delete"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"
dirs = "6"
